# vkt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Docker/: Dockerfile  config.ini  config2.ini  docker-compose.yml  genesis.json  nodeosd.sh
contracts/: CMakeLists.txt
contracts/eosio.system/: eosio.system.cpp  eosio.system.hpp  voting.cpp
contracts/vankia.trans/: CMakeLists.txt  vankia.trans.abi  vankia.trans.cpp  vankia.trans.hpp
libraries/chain/: CMakeLists.txt  block_log.cpp  controller.cpp  genesis_state.cpp  genesis_state_origin.cpp  genesis_state_origin_root_key.cpp.in
libraries/chain/include/eosio/chain/: block_log.hpp  config.hpp  controller.hpp  genesis_state.hpp  genesis_state_origin.hpp
plugins/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/hblf_mongo_db_plugin/: CMakeLists.txt  hblf_mongo_db_plugin.cpp
plugins/hblf_mongo_db_plugin/include/vktio/hblf_mongo_db_plugin/: hblf_mongo_db_plugin.hpp
plugins/vkt_txn_test_gen_plugin/: CMakeLists.txt  README.md  vkt_txn_test_gen_plugin.cpp
plugins/vkt_txn_test_gen_plugin/include/eosio/vkt_txn_test_gen_plugin/: vkt_txn_test_gen_plugin.hpp
programs/nodeos/: CMakeLists.txt
scripts/: .build_vars  .environment  eosio_build.sh  eosio_install.sh
scripts/helpers/: eosio.sh
unittests/test-contracts/vankia.trans/: vankia.authright.cpp  vankia.trans.hpp
